<resources>
    /*Main*/
    <string name="label_Main">Escoge la práctica que deseas ver</string>

    /*Button*/
    <string name="app_name">Prácticas en Android Studio (TAP)</string>
    <string name="label1">Ingrese el valor 1</string>
    <string name="label2">Ingrese el valor 2</string>
    <string name="resultadoLabel">El resulatdo aparecerá aquí</string>

    /*Radio group*/
    <string name="label1_p2">Ingrese el valor 1</string>
    <string name="label2_p2">Ingrese el valor 2</string>
    <string name="resultadoLabel_p2">El resulatdo aparecerá aquí</string>
    <string name="radioBtn1">Suma</string>
    <string name="radioBtn2">Resta</string>

    /*CheckBox*/
    <string name="textView1_p3">Ingresa el valor 1</string>
    <string name="textView2_p3">Ingresa el valor 2</string>
    <string name="textViewRes_p3">Aquí aparecerán los resultados</string>
    <string name="checkBox_btn1_p3">Sumar</string>
    <string name="checkBox_btn2_p3">Restar</string>

    /*Spinner*/
    <string name="textView1_p4">Ingresa el valor 1</string>
    <string name="textView2_p4">Ingresa el valor 2</string>
    <string name="textViewRes_p4">Aquí aparecerán los resultados</string>
    <string name="spinner_p4">Selecciona una operación</string>

    /*List View*/
    <string name="textView_p5">Selecciona un nombre</string>

    /*Image Button*/
    <string name="imgButton_info">Info de la activity</string>
    <string name="imgButton_close">Cerrar algo</string>

    /*Toast Notification*/
    <string name="textView_p7">¿Cuál es el númeor que se generó?</string>

    /*Text view con usuario y contraseña*/
    <string name="textView_usuario">Ingresa el nombre del usuario</string>
    <string name="textView_password">*********</string>

    /*Problema de cambio Activity*/
    <string name="textView_usuario_P">Ingrese la clave</string>
    /*Problema de cambio Activity2*/
    <string name="textView_usuario_P2">Bienvenid@</string>

    /*Parámetros entre activities*/
    <string name="textView_parametros">Ingrese un sitio web</string>

    /*Shared Preferences email*/
    <string name="textView_SP_email">Ingresa tu email</string>
    
    /*Agenda de contactos*/
    <string name="textView_title_SP">LISTA DE CONTACTOS</string>
    <string name="textView_name_SP">Nombre del contacto</string>
    <string name="textView_multiline">Datos del contacto</string>

    /*Número Random al azar*/
    <string name="textView_juego_SP">JUEGO DEL NÚMERO ALEATORIO</string>
    <string name="textView_msg_SP">Trata de adivinar el número alaetorio entre el 1 y 50</string>
    <string name="textView_puntaje">Puntaje: </string>
    <string name="textView_puntajeVar"></string>
</resources>
