<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textView_res_p3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkbox">

    <EditText
        android:id="@+id/textView2_p3"
        android:layout_width="276dp"
        android:layout_height="76dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/textView2_p3"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1_p3" />

    <EditText
        android:id="@+id/textView1_p3"
        android:layout_width="272dp"
        android:layout_height="74dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/textView1_p3"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/btn_CB_suma"
        android:layout_width="141dp"
        android:layout_height="66dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/checkBox_btn1_p3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_p3" />

    <CheckBox
        android:id="@+id/btn_CB_resta"
        android:layout_width="144dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/checkBox_btn2_p3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_CB_suma" />

    <Button
        android:id="@+id/btn_p3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="72dp"
        android:onClick="operacion"
        android:text="Calcular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_p3" />

    <TextView
        android:id="@+id/textViewRes_p3"
        android:layout_width="178dp"
        android:layout_height="67dp"
        android:layout_marginTop="264dp"
        android:text="@string/textViewRes_p3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_p3" />
</androidx.constraintlayout.widget.ConstraintLayout>