<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioGroup">

    <TextView
        android:id="@+id/label1_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/label1_p2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label2_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/label2_p2"
        app:layout_constraintBottom_toTopOf="@+id/input2_p2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1_p2" />

    <EditText
        android:id="@+id/input1_p2"
        android:layout_width="293dp"
        android:layout_height="68dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1_p2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/input2_p2"
        android:layout_width="293dp"
        android:layout_height="71dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="464dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:onClick="operacion"
        android:text="OPERACIÓN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="306dp"
        android:layout_height="123dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2_p2">

        <RadioButton
            android:id="@+id/radioBtn_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn1" />

        <RadioButton
            android:id="@+id/radioBtn_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn2" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultadoLabel_p2"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="52dp"
        android:text="@string/resultadoLabel_p2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_p2" />
</androidx.constraintlayout.widget.ConstraintLayout>