<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Button2">

    <EditText
        android:id="@+id/input1_p1"
        android:layout_width="245dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="124dp"
        android:ems="10"
        android:hint="@string/label1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input2_p1"
        android:layout_width="246dp"
        android:layout_height="61dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:hint="@string/label2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1_p1" />

    <Button
        android:id="@+id/btn_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="calcular"
        android:text="Calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2_p1" />

    <TextView
        android:id="@+id/textView_res_p1"
        android:layout_width="269dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:text="@string/resultadoLabel"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_p1" />
</androidx.constraintlayout.widget.ConstraintLayout>