<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agenda_contactos">

    <TextView
        android:id="@+id/textView_SP_name"
        android:layout_width="229dp"
        android:layout_height="27dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="88dp"
        android:text="@string/textView_name_SP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_SP_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_SP_name" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="239dp"
        android:layout_height="25dp"
        android:layout_marginTop="72dp"
        android:text="@string/textView_multiline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_SP_name" />

    <EditText
        android:id="@+id/editText_multiline_SP"
        android:layout_width="226dp"
        android:layout_height="97dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView_title_SP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/textView_title_SP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_buscarContacto"
        android:layout_width="178dp"
        android:layout_height="57dp"
        android:layout_marginTop="96dp"
        android:onClick="buscarContacto"
        android:text="Buscar contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_multiline_SP" />

    <Button
        android:id="@+id/guardarContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="guardarContacto"
        android:text="Guardar contacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscarContacto" />

</androidx.constraintlayout.widget.ConstraintLayout>